web-infras/parser/tests/fixtures/esprima/ES6/yield/invalid-yield-strict-function-expression/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,11)
1|(function yield(){ "use strict"; })
 |         ^
